--- a/SistemaInventario/SistemaInventario.csproj
+++ b/SistemaInventario/SistemaInventario.csproj
@@ -173,6 +173,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Clientes\MostrarClientes.cshtml" />
     <Content Include="Views\Proveedores\MostrarProveedores.cshtml" />
+    <Content Include="Views\Clientes\AgregarClientes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
