--- a/SistemaInventario/SistemaInventario.csproj
+++ b/SistemaInventario/SistemaInventario.csproj
@@ -174,6 +174,7 @@
     <Content Include="Views\Clientes\MostrarClientes.cshtml" />
     <Content Include="Views\Proveedores\MostrarProveedores.cshtml" />
     <Content Include="Views\Clientes\AgregarClientes.cshtml" />
+    <Content Include="Views\Proveedores\EditOrAddProveedores.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
