--- a/SistemaInventario/SistemaInventario.csproj
+++ b/SistemaInventario/SistemaInventario.csproj
@@ -173,7 +173,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Clientes\MostrarClientes.cshtml" />
     <Content Include="Views\Proveedores\MostrarProveedores.cshtml" />
-    <Content Include="Views\Clientes\AgregarClientes.cshtml" />
+    <Content Include="Views\Clientes\AgregarOEditarClientes.cshtml" />
     <Content Include="Views\Proveedores\EditOrAddProveedores.cshtml" />
   </ItemGroup>
   <ItemGroup>
