--- a/BAL/BAL.csproj
+++ b/BAL/BAL.csproj
@@ -55,11 +55,13 @@
     <Compile Include="IServices\IClientesRepositoty.cs" />
     <Compile Include="IServices\IMarcasRepository.cs" />
     <Compile Include="IServices\IProveedoresRepository.cs" />
+    <Compile Include="IServices\IVentasRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AutosRepository.cs" />
     <Compile Include="Services\ClientesRepository.cs" />
     <Compile Include="Services\MarcasRepository.cs" />
     <Compile Include="Services\ProveedoresRepository.cs" />
+    <Compile Include="Services\VentasRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
