--- a/SistemaInventario/SistemaInventario.csproj
+++ b/SistemaInventario/SistemaInventario.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MarcasController.cs" />
     <Compile Include="Controllers\ProveedoresController.cs" />
+    <Compile Include="Controllers\UsuariosController.cs" />
     <Compile Include="Controllers\VentasController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -188,6 +189,8 @@
     <Content Include="Views\Autos\AgregarOEditarAutos.cshtml" />
     <Content Include="Views\Ventas\MostrarVentas.cshtml" />
     <Content Include="Views\Ventas\AgregarOEditarVentas.cshtml" />
+    <Content Include="Views\Usuarios\MostrarUsuarios.cshtml" />
+    <Content Include="Views\Usuarios\EditarOCrearUsuarios.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
