--- a/BAL/BAL.csproj
+++ b/BAL/BAL.csproj
@@ -51,14 +51,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IServices\IComprasRepository.cs" />
     <Compile Include="IServices\IAutosRepository.cs" />
     <Compile Include="IServices\IClientesRepositoty.cs" />
     <Compile Include="IServices\IMarcasRepository.cs" />
+    <Compile Include="IServices\InterfazInventario.cs" />
     <Compile Include="IServices\IProveedoresRepository.cs" />
     <Compile Include="IServices\IVentasRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AutosRepository.cs" />
     <Compile Include="Services\ClientesRepository.cs" />
+    <Compile Include="Services\ComprasRepository.cs" />
+    <Compile Include="Services\InventarioRepository.cs" />
     <Compile Include="Services\MarcasRepository.cs" />
     <Compile Include="Services\ProveedoresRepository.cs" />
     <Compile Include="Services\VentasRepository.cs" />
