Moficación de diseño

--- a/SistemaInventario/SistemaInventario.csproj
+++ b/SistemaInventario/SistemaInventario.csproj
@@ -146,9 +146,20 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Diseños\body-color.css" />
     <Content Include="Content\Diseños\Footer.css" />
     <Content Include="Content\Diseños\Navbar.css" />
+    <Content Include="Content\Diseños\tarjetas.css" />
     <Content Include="Content\Diseños\Table.css" />
+    <Content Include="Content\img_cars\blackCar.jpg" />
+    <Content Include="Content\img_cars\blue-car.jpg" />
+    <Content Include="Content\img_cars\card.css" />
+    <Content Include="Content\img_cars\gray-car.jpg" />
+    <Content Include="Content\img_cars\green-car.jpeg" />
+    <Content Include="Content\img_cars\lightblue-car.jpeg" />
+    <Content Include="Content\img_cars\red-car.jpg" />
+    <Content Include="Content\img_cars\white-black-car.jpg" />
+    <Content Include="Content\img_cars\yellow-black-car.jpg" />
     <Content Include="Scripts\JavaScript.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
