--- a/BAL/BAL.csproj
+++ b/BAL/BAL.csproj
@@ -51,14 +51,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IServices\IComprasRepository.cs" />
+    <Compile Include="IServices\IDetalleComprasRepository.cs" />
     <Compile Include="IServices\IAutosRepository.cs" />
     <Compile Include="IServices\IClientesRepositoty.cs" />
     <Compile Include="IServices\IMarcasRepository.cs" />
     <Compile Include="IServices\InterfazInventario.cs" />
     <Compile Include="IServices\IProveedoresRepository.cs" />
     <Compile Include="IServices\IUsuariosRepository.cs" />
-    <Compile Include="IServices\IVentasRepository.cs" />
+    <Compile Include="IServices\IDetalleVentasRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AutosRepository.cs" />
     <Compile Include="Services\ClientesRepository.cs" />
