--- a/BAL/BAL.csproj
+++ b/BAL/BAL.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgregarAInventario\AgregarAInventario.cs" />
     <Compile Include="IServices\IDetalleComprasRepository.cs" />
     <Compile Include="IServices\IAutosRepository.cs" />
     <Compile Include="IServices\IClientesRepositoty.cs" />
@@ -59,6 +60,7 @@
     <Compile Include="IServices\IProveedoresRepository.cs" />
     <Compile Include="IServices\IUsuariosRepository.cs" />
     <Compile Include="IServices\IDetalleVentasRepository.cs" />
+    <Compile Include="AutosAVender\AutosAVender.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AutosRepository.cs" />
     <Compile Include="Services\ClientesRepository.cs" />
