No se permite eliminar auto cuando la cantidad es mayor a cero

--- a/SistemaInventario/SistemaInventario.csproj
+++ b/SistemaInventario/SistemaInventario.csproj
@@ -150,12 +150,21 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Diseños\Footer.css" />
     <Content Include="Content\Diseños\formularios.css" />
+    <Content Include="Content\Diseños\index.css" />
     <Content Include="Content\Diseños\Login.css" />
     <Content Include="Content\Diseños\Navbar.css" />
     <Content Include="Content\Diseños\tarjetas.css" />
     <Content Include="Content\Diseños\Table.css" />
+    <Content Include="Content\img_cars\1.jpg" />
+    <Content Include="Content\img_cars\2.jpg" />
+    <Content Include="Content\img_cars\3.jpg" />
+    <Content Include="Content\img_cars\4.jpg" />
     <Content Include="Content\img_cars\blackCar.jpg" />
     <Content Include="Content\img_cars\blue-car.jpg" />
+    <Content Include="Content\img_cars\car1.jpg" />
+    <Content Include="Content\img_cars\car3.jpg" />
+    <Content Include="Content\img_cars\car4.jpg" />
+    <Content Include="Content\img_cars\car5.jpg" />
     <Content Include="Content\img_cars\card.css" />
     <Content Include="Content\img_cars\gray-car.jpg" />
     <Content Include="Content\img_cars\green-car.jpeg" />
@@ -163,6 +172,7 @@
     <Content Include="Content\img_cars\red-car.jpg" />
     <Content Include="Content\img_cars\white-black-car.jpg" />
     <Content Include="Content\img_cars\yellow-black-car.jpg" />
+    <Content Include="Scripts\Alerta.js" />
     <Content Include="Scripts\navbar.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -170,6 +180,8 @@
     <Content Include="Content\Diseños\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\img_cars\car2.webp" />
+    <Content Include="Content\img_cars\5.jpg" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
