--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -76,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Encriptado\EncriptarPassword.cs" />
+    <Compile Include="Models\Carrito.cs" />
     <Compile Include="Models\Contexto.cs" />
     <Compile Include="Models\tabAutos.cs" />
     <Compile Include="Models\tabClientes.cs" />
