--- a/SistemaInventario/Web.config
+++ b/SistemaInventario/Web.config
@@ -57,6 +57,8 @@
   </entityFramework>
   <connectionStrings>
     <add name="Contexto" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=db_sistema_inventario;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=db_sistema_inventario;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Contexto1" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=db_sistema_inventario;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
