--- a/SistemaInventario/SistemaInventario.csproj
+++ b/SistemaInventario/SistemaInventario.csproj
@@ -141,6 +141,19 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Carrito.cs" />
+    <Compile Include="Models\Contexto1.cs" />
+    <Compile Include="Models\sysdiagrams.cs" />
+    <Compile Include="Models\tabAutos.cs" />
+    <Compile Include="Models\tabClientes.cs" />
+    <Compile Include="Models\tabCompras.cs" />
+    <Compile Include="Models\tabDetalleCompras.cs" />
+    <Compile Include="Models\tabDetalleVentas.cs" />
+    <Compile Include="Models\tabInventario.cs" />
+    <Compile Include="Models\tabMarcas.cs" />
+    <Compile Include="Models\tabProveedores.cs" />
+    <Compile Include="Models\tabUsuarios.cs" />
+    <Compile Include="Models\tabVentas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -229,7 +242,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\Comprar\" />
     <Folder Include="Views\Vender\" />
   </ItemGroup>
