Se cambio conexión a base de datos en linea

--- a/SistemaInventario/Web.config
+++ b/SistemaInventario/Web.config
@@ -56,9 +56,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Contexto" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=db_sistema_inventario;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="Model1" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=db_sistema_inventario;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="Contexto1" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=db_sistema_inventario;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	  <add name="Contexto" connectionString="workstation id=SistemaInventario.mssql.somee.com;packet size=4096;user id=alfredotorres_SQLLogin_1;pwd=m6q5sb5zqd;data source=SistemaInventario.mssql.somee.com;persist security info=False;initial catalog=SistemaInventario;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
